force-app/main/default/objects/Log_Proceso__c/Log_Proceso__c.object-meta.xml
<CustomObject>
    <label>Log de Proceso</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs de Proceso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>