force-app/main/default/objects/Log_Proceso__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exitoso</fullName>
                <default>true</default>
                <label>Exitoso</label>
            </value>
            <value>
                <fullName>Con Errores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>