force-app/main/default/objects/Log_Proceso__c/fields/Fecha_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ejecucion__c</fullName>
    <label>Fecha de Ejecución</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>