force-app/main/default/objects/Log_Proceso__c/fields/Registros_con_Error__c.field-meta.xml
<CustomField>
    <fullName>Registros_con_Error__c</fullName>
    <label>Registros con Error</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>