force-app/main/default/objects/Log_Proceso__c/fields/Registros_Procesados__c.field-meta.xml
<CustomField>
    <fullName>Registros_Procesados__c</fullName>
    <label>Registros Procesados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>