force-app/main/default/objects/Log_Proceso__c/fields/Tipo_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Proceso__c</fullName>
    <label>Tipo de Proceso</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>